Generate new release

--- a/release/index.html
+++ b/release/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="master.css" type="text/css" />
-    <title>The Backbone.js on Rails Adventure</title>
+    <title>Backbone.js on Rails</title>
   </head>
   <body>
     <a href="book.epub">Epub (iBooks)</a> | 
@@ -12,7 +12,7 @@
     <a href="book.pdf">PDF</a>
     <hr/>
     <div class="content">
-      <h1>The Backbone.js on Rails Adventure</h1>
+      <h1>Backbone.js on Rails</h1>
       <hr/>
       <div>
         
