Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -570,7 +570,7 @@ asciidoc.install();
 <h3 id="_on_dates_times_javascript_and_serialization">On dates, times, javascript, and serialization</h3>
 </div>
 <div class="sect2">
-<h3 id="_coffeescript">Coffeescript</h3>
+<h3 id="_coffeescript">CoffeeScript</h3>
 </div>
 <div class="sect2">
 <h3 id="_bind_and_bindall_and_javascript_8217_s_tt_this_tt_keyword">bind and bindAll and JavaScript&#8217;s <tt>this</tt> keyword</h3>
@@ -581,7 +581,7 @@ asciidoc.install();
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-07-14 17:34:40 EDT
+Last updated 2011-07-14 17:38:21 EDT
 </div>
 </div>
 </body>
