--- a/release/the_javascript_language.html
+++ b/release/the_javascript_language.html
@@ -34,7 +34,7 @@
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_on_dates_times_javascript_and_serialization"></a>On dates, times, javascript, and serialization</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_coffeescript"></a>Coffeescript</h3></div></div></div></div>
+<a id="_coffeescript"></a>CoffeeScript</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_bind_and_bindall_and_javascript_8217_s_literal_this_literal_keyword"></a>bind and bindAll and JavaScript’s <code class="literal">this</code> keyword</h3></div></div></div></div>
 </div>
