--- a/release/toc.html
+++ b/release/toc.html
@@ -45,6 +45,6 @@
 <h3><b>Chapter 8<br/>
 <a href="book.html#_the_javascript_language">The JavaScript language</a></b></h3><br/>
 <a href="book.html#_on_dates_times_javascript_and_serialization"><b>On dates, times, javascript, and serialization</b></a><br/>
-<a href="book.html#_coffeescript"><b>Coffeescript</b></a><br/>
+<a href="book.html#_coffeescript"><b>CoffeeScript</b></a><br/>
 <a href="book.html#_bind_and_bindall_and_javascript_8217_s_tt_this_tt_keyword"><b>bind and bindAll and JavaScript&#8217;s <tt>this</tt> keyword</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
