--- a/release/testing.html
+++ b/release/testing.html
@@ -35,11 +35,9 @@
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_testing"></a>Testing</h2></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_not_off_the_hook"></a>Not off the hook</h3></div></div></div></div>
+<a id="_full_stack_integration_testing"></a>Full-stack integration testing</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_integration"></a>Integration</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_unit"></a>Unit</h3></div></div></div></div>
+<a id="_isolated_unit_testing"></a>Isolated unit testing</h3></div></div></div></div>
 </div>
 
     </div>
