--- a/release/the_javascript_language.html
+++ b/release/the_javascript_language.html
@@ -32,11 +32,11 @@
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_the_javascript_language"></a>The JavaScript language</h2></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_on_dates_times_javascript_and_serialization"></a>On dates, times, javascript, and serialization</h3></div></div></div></div>
+<a id="_model_attribute_types_and_serialization"></a>Model attribute types and serialization</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_coffeescript"></a>CoffeeScript</h3></div></div></div></div>
+<a id="_context_binding_js_literal_this_literal"></a>Context binding (JS <code class="literal">this</code>)</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_bind_and_bindall_and_javascript_8217_s_literal_this_literal_keyword"></a>bind and bindAll and JavaScript’s <code class="literal">this</code> keyword</h3></div></div></div></div>
+<a id="_coffeescript_with_backbone_js"></a>CoffeeScript with Backbone.js</h3></div></div></div></div>
 </div>
 
     </div>
