--- a/release/toc.html
+++ b/release/toc.html
@@ -5,46 +5,45 @@
 <h3><b>Chapter 1<br/>
 <a href="book.html#_preface">Preface</a></b></h3><br/>
 <h3><b>Chapter 2<br/>
-<a href="book.html#_introduction">Introduction</a></b></h3><br/>
-<a href="book.html#_when_not_to_use_backbone_js"><b>When not to use Backbone.js</b></a><br/>
-<a href="book.html#_why_backbone_js_and_not_kickstart_js_sproutcore_etc"><b>Why Backbone.js and not kickstart.js, sproutcore, etc.</b></a><br/>
+<a href="book.html#_getting_up_to_speed">Getting up to speed</a></b></h3><br/>
+<a href="book.html#_backbone_js_online_resources"><b>Backbone.js online resources</b></a><br/>
+<a href="book.html#_javascript_onlines_resources_and_books"><b>JavaScript onlines resources and books</b></a><br/>
 <h3><b>Chapter 3<br/>
+<a href="book.html#_introduction">Introduction</a></b></h3><br/>
+<a href="book.html#_why_use_backbone_js"><b>Why use Backbone.js</b></a><br/>
+<a href="book.html#_when_not_to_use_backbone_js"><b>When not to use Backbone.js</b></a><br/>
+<a href="book.html#_why_not_sproutcore_cappuccino_knockout_js_spine_etc"><b>Why not SproutCore, Cappuccino, Knockout.js, Spine, etc.</b></a><br/>
+<h3><b>Chapter 4<br/>
 <a href="book.html#_organization">Organization</a></b></h3><br/>
 <a href="book.html#_backbone_js_and_mvc"><b>Backbone.js and MVC</b></a><br/>
 <a href="book.html#_what_goes_where_in_mvc"><b>What goes where in MVC</b></a><br/>
-<h3><b>Chapter 4<br/>
-<a href="book.html#_rails_integration">Rails integration</a></b></h3><br/>
-<a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
-<a href="book.html#_converting_your_rails_models_to_backbone_js_friendly_json"><b>Converting your Rails models to Backbone.js-friendly JSON</b></a><br/>
-<a href="book.html#_code_organization"><b>Code organization</b></a><br/>
-<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js_incremental_addition"><b>Converting an existing page/view area to use Backbone.js (incremental addition)</b></a><br/>
+<a href="book.html#_namespacing_your_application"><b>Namespacing your application</b></a><br/>
 <h3><b>Chapter 5<br/>
+<a href="book.html#_rails_integration">Rails integration</a></b></h3><br/>
+<a href="book.html#_activerecord_and_backbone_js"><b>ActiveRecord and Backbone.js</b></a><br/>
+<a href="book.html#_converting_your_rails_models_to_backbone_friendly_json"><b>Converting your Rails models to backbone-friendly JSON</b></a><br/>
+<a href="book.html#_organizing_your_backbone_and_rails_code_side_by_side"><b>Organizing your Backbone and Rails code side-by-side</b></a><br/>
+<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_incremental_addition"><b>Converting an existing page/view area to use backbone (incremental addition)</b></a><br/>
+<a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
+<h3><b>Chapter 6<br/>
 <a href="book.html#_views_and_templates">Views and Templates</a></b></h3><br/>
 <a href="book.html#_view_explanation_what_is_a_view_class_viewcontroller_distinguish_templates_from_views"><b>View explanation (what is a view class, viewcontroller, distinguish templates from views)</b></a><br/>
-<a href="book.html#_templating_strategy_underscore_mustache_static_html_with_view_class_content"><b>Templating strategy - underscore, mustache, static html with view class content</b></a><br/>
-<a href="book.html#_view_helpers"><b>View helpers</b></a><br/>
-<a href="book.html#_form_helpers"><b>Form helpers</b></a><br/>
-<a href="book.html#_event_binding"><b>Event binding</b></a><br/>
-<a href="book.html#_how_to_use_multiple_views_on_the_same_model_collection"><b>How to use multiple views on the same model/collection</b></a><br/>
-<a href="book.html#_cleaning_up_binding_unbinding"><b>Cleaning up / binding / unbinding</b></a><br/>
-<a href="book.html#_internationalization"><b>Internationalization</b></a><br/>
-<h3><b>Chapter 6<br/>
+<a href="book.html#_templating_strategy"><b>Templating strategy</b></a><br/>
+<h3><b>Chapter 7<br/>
 <a href="book.html#_models_and_collections">Models and collections</a></b></h3><br/>
 <a href="book.html#_naming_conventions"><b>Naming conventions</b></a><br/>
 <a href="book.html#_nested_resources"><b>Nested resources</b></a><br/>
-<a href="book.html#_resource_relationships"><b>Resource relationships</b></a><br/>
-<a href="book.html#_named_scopes"><b>Named scopes</b></a><br/>
+<a href="book.html#_relationships"><b>Relationships</b></a><br/>
+<a href="book.html#_scopes_and_filters"><b>Scopes and filters</b></a><br/>
 <a href="book.html#_client_server_duplicated_business_logic"><b>Client/Server duplicated business logic</b></a><br/>
 <a href="book.html#_validations"><b>Validations</b></a><br/>
-<a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
-<h3><b>Chapter 7<br/>
-<a href="book.html#_testing">Testing</a></b></h3><br/>
-<a href="book.html#_not_off_the_hook"><b>Not off the hook</b></a><br/>
-<a href="book.html#_integration"><b>Integration</b></a><br/>
-<a href="book.html#_unit"><b>Unit</b></a><br/>
 <h3><b>Chapter 8<br/>
+<a href="book.html#_testing">Testing</a></b></h3><br/>
+<a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
+<a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
+<h3><b>Chapter 9<br/>
 <a href="book.html#_the_javascript_language">The JavaScript language</a></b></h3><br/>
-<a href="book.html#_on_dates_times_javascript_and_serialization"><b>On dates, times, javascript, and serialization</b></a><br/>
-<a href="book.html#_coffeescript"><b>CoffeeScript</b></a><br/>
-<a href="book.html#_bind_and_bindall_and_javascript_8217_s_tt_this_tt_keyword"><b>bind and bindAll and JavaScript&#8217;s <tt>this</tt> keyword</b></a><br/>
+<a href="book.html#_model_attribute_types_and_serialization"><b>Model attribute types and serialization</b></a><br/>
+<a href="book.html#_context_binding_js_tt_this_tt"><b>Context binding (JS <tt>this</tt>)</b></a><br/>
+<a href="book.html#_coffeescript_with_backbone_js"><b>CoffeeScript with Backbone.js</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
