--- a/release/models_and_collections.html
+++ b/release/models_and_collections.html
@@ -39,9 +39,9 @@
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_nested_resources"></a>Nested resources</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_resource_relationships"></a>Resource relationships</h3></div></div></div></div>
+<a id="_relationships"></a>Relationships</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_named_scopes"></a>Named scopes</h3></div></div></div></div>
+<a id="_scopes_and_filters"></a>Scopes and filters</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_client_server_duplicated_business_logic"></a>Client/Server duplicated business logic</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en">
@@ -49,11 +49,10 @@
 <a id="_validations"></a>Validations</h3></div></div></div>
 <div class="note" style="margin-left: 0.5in; margin-right: 0.5in;">
 <h3 class="title">Note</h3>
-<p>Is this model stuff or view stuff? ErrorView, what else?</p>
+<p>Is this model stuff or view stuff? ErrorView, what else?
+=== Synchronizing between clients</p>
 </div>
 </div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_synchronizing_between_clients"></a>Synchronizing between clients</h3></div></div></div></div>
 </div>
 
     </div>
