Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -452,7 +452,7 @@ asciidoc.install();
 <h3 id="_backbone_js_online_resources">Backbone.js online resources</h3>
 </div>
 <div class="sect2">
-<h3 id="_javascript_onlines_resources_and_books">JavaScript onlines resources and books</h3>
+<h3 id="_javascript_online_resources_and_books">JavaScript online resources and books</h3>
 </div>
 </div>
 </div>
@@ -481,7 +481,6 @@ asciidoc.install();
 </div>
 <div class="sect2">
 <h3 id="_namespacing_your_application">Namespacing your application</h3>
-<div class="paragraph"><p>Where do I put display logic, avoid putting biz logic in controllers</p></div>
 </div>
 </div>
 </div>
@@ -585,7 +584,7 @@ asciidoc.install();
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-07-15 15:46:38 EDT
+Last updated 2011-07-15 19:11:29 EDT
 </div>
 </div>
 </body>
