--- a/release/getting_up_to_speed.html
+++ b/release/getting_up_to_speed.html
@@ -37,7 +37,7 @@
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_backbone_js_online_resources"></a>Backbone.js online resources</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_javascript_onlines_resources_and_books"></a>JavaScript onlines resources and books</h3></div></div></div></div>
+<a id="_javascript_online_resources_and_books"></a>JavaScript online resources and books</h3></div></div></div></div>
 </div>
 
     </div>
