--- a/release/toc.html
+++ b/release/toc.html
@@ -7,7 +7,7 @@
 <h3><b>Chapter 2<br/>
 <a href="book.html#_getting_up_to_speed">Getting up to speed</a></b></h3><br/>
 <a href="book.html#_backbone_js_online_resources"><b>Backbone.js online resources</b></a><br/>
-<a href="book.html#_javascript_onlines_resources_and_books"><b>JavaScript onlines resources and books</b></a><br/>
+<a href="book.html#_javascript_online_resources_and_books"><b>JavaScript online resources and books</b></a><br/>
 <h3><b>Chapter 3<br/>
 <a href="book.html#_introduction">Introduction</a></b></h3><br/>
 <a href="book.html#_why_use_backbone_js"><b>Why use Backbone.js</b></a><br/>
