--- a/release/organization.html
+++ b/release/organization.html
@@ -38,11 +38,8 @@
 <a id="_backbone_js_and_mvc"></a>Backbone.js and MVC</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_what_goes_where_in_mvc"></a>What goes where in MVC</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en">
-<div class="titlepage"><div><div><h3 class="title">
-<a id="_namespacing_your_application"></a>Namespacing your application</h3></div></div></div>
-<p>Where do I put display logic, avoid putting biz logic in controllers</p>
-</div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_namespacing_your_application"></a>Namespacing your application</h3></div></div></div></div>
 </div>
 
     </div>
