Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -491,13 +491,13 @@ asciidoc.install();
 <h3 id="_activerecord_and_backbone_js">ActiveRecord and Backbone.js</h3>
 </div>
 <div class="sect2">
-<h3 id="_converting_your_rails_models_to_backbone_friendly_json">Converting your Rails models to backbone-friendly JSON</h3>
+<h3 id="_converting_your_rails_models_to_backbone_js_friendly_json">Converting your Rails models to Backbone.js-friendly JSON</h3>
 </div>
 <div class="sect2">
-<h3 id="_organizing_your_backbone_and_rails_code_side_by_side">Organizing your Backbone and Rails code side-by-side</h3>
+<h3 id="_organizing_your_backbone_js_and_rails_code_side_by_side">Organizing your Backbone.js and Rails code side-by-side</h3>
 </div>
 <div class="sect2">
-<h3 id="_converting_an_existing_page_view_area_to_use_backbone_incremental_addition">Converting an existing page/view area to use backbone (incremental addition)</h3>
+<h3 id="_converting_an_existing_page_view_area_to_use_backbone_js">Converting an existing page/view area to use Backbone.js</h3>
 </div>
 <div class="sect2">
 <h3 id="_automatically_using_the_rails_authentication_token">Automatically using the Rails authentication token</h3>
@@ -508,18 +508,31 @@ asciidoc.install();
 <h2 id="_views_and_templates">Views and Templates</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_view_explanation_what_is_a_view_class_viewcontroller_distinguish_templates_from_views">View explanation (what is a view class, viewcontroller, distinguish templates from views)</h3>
+<h3 id="_view_explanation">View explanation</h3>
 </div>
 <div class="sect2">
 <h3 id="_templating_strategy">Templating strategy</h3>
-<div class="paragraph"><p>When to use Underscore templates, mustache templates, or static HTML with view class content
-=== View helpers
-=== Form helpers
-=== Event binding
-=== How to use multiple views on the same model/collection
-=== Composed views
-=== Cleaning up: understanding binding and unbinding
-=== Internationalization</p></div>
+</div>
+<div class="sect2">
+<h3 id="_view_helpers">View helpers</h3>
+</div>
+<div class="sect2">
+<h3 id="_form_helpers">Form helpers</h3>
+</div>
+<div class="sect2">
+<h3 id="_event_binding">Event binding</h3>
+</div>
+<div class="sect2">
+<h3 id="_how_to_use_multiple_views_on_the_same_model_collection">How to use multiple views on the same model/collection</h3>
+</div>
+<div class="sect2">
+<h3 id="_composed_views">Composed views</h3>
+</div>
+<div class="sect2">
+<h3 id="_cleaning_up_understanding_binding_and_unbinding">Cleaning up: understanding binding and unbinding</h3>
+</div>
+<div class="sect2">
+<h3 id="_internationalization">Internationalization</h3>
 </div>
 </div>
 </div>
@@ -543,15 +556,9 @@ asciidoc.install();
 </div>
 <div class="sect2">
 <h3 id="_validations">Validations</h3>
-<div class="admonitionblock">
-<table><tr>
-<td class="icon">
-<div class="title">Note</div>
-</td>
-<td class="content">Is this model stuff or view stuff? ErrorView, what else?
-=== Synchronizing between clients</td>
-</tr></table>
 </div>
+<div class="sect2">
+<h3 id="_synchronizing_between_clients">Synchronizing between clients</h3>
 </div>
 </div>
 </div>
@@ -584,7 +591,7 @@ asciidoc.install();
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-07-15 19:11:29 EDT
+Last updated 2011-07-17 15:12:41 EDT
 </div>
 </div>
 </body>
