--- a/release/rails_integration.html
+++ b/release/rails_integration.html
@@ -37,11 +37,11 @@
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_activerecord_and_backbone_js"></a>ActiveRecord and Backbone.js</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_converting_your_rails_models_to_backbone_friendly_json"></a>Converting your Rails models to backbone-friendly JSON</h3></div></div></div></div>
+<a id="_converting_your_rails_models_to_backbone_js_friendly_json"></a>Converting your Rails models to Backbone.js-friendly JSON</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_organizing_your_backbone_and_rails_code_side_by_side"></a>Organizing your Backbone and Rails code side-by-side</h3></div></div></div></div>
+<a id="_organizing_your_backbone_js_and_rails_code_side_by_side"></a>Organizing your Backbone.js and Rails code side-by-side</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_converting_an_existing_page_view_area_to_use_backbone_incremental_addition"></a>Converting an existing page/view area to use backbone (incremental addition)</h3></div></div></div></div>
+<a id="_converting_an_existing_page_view_area_to_use_backbone_js"></a>Converting an existing page/view area to use Backbone.js</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_automatically_using_the_rails_authentication_token"></a>Automatically using the Rails authentication token</h3></div></div></div></div>
 </div>
