--- a/release/views_and_templates.html
+++ b/release/views_and_templates.html
@@ -35,19 +35,23 @@
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
 <a id="_views_and_templates"></a>Views and Templates</h2></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_view_explanation_what_is_a_view_class_viewcontroller_distinguish_templates_from_views"></a>View explanation (what is a view class, viewcontroller, distinguish templates from views)</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en">
-<div class="titlepage"><div><div><h3 class="title">
-<a id="_templating_strategy"></a>Templating strategy</h3></div></div></div>
-<p>When to use Underscore templates, mustache templates, or static HTML with view class content
-=== View helpers
-=== Form helpers
-=== Event binding
-=== How to use multiple views on the same model/collection
-=== Composed views
-=== Cleaning up: understanding binding and unbinding
-=== Internationalization</p>
-</div>
+<a id="_view_explanation"></a>View explanation</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_templating_strategy"></a>Templating strategy</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_view_helpers"></a>View helpers</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_form_helpers"></a>Form helpers</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_event_binding"></a>Event binding</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_how_to_use_multiple_views_on_the_same_model_collection"></a>How to use multiple views on the same model/collection</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_composed_views"></a>Composed views</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_cleaning_up_understanding_binding_and_unbinding"></a>Cleaning up: understanding binding and unbinding</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
+<a id="_internationalization"></a>Internationalization</h3></div></div></div></div>
 </div>
 
     </div>
