--- a/release/toc.html
+++ b/release/toc.html
@@ -21,14 +21,21 @@
 <h3><b>Chapter 5<br/>
 <a href="book.html#_rails_integration">Rails integration</a></b></h3><br/>
 <a href="book.html#_activerecord_and_backbone_js"><b>ActiveRecord and Backbone.js</b></a><br/>
-<a href="book.html#_converting_your_rails_models_to_backbone_friendly_json"><b>Converting your Rails models to backbone-friendly JSON</b></a><br/>
-<a href="book.html#_organizing_your_backbone_and_rails_code_side_by_side"><b>Organizing your Backbone and Rails code side-by-side</b></a><br/>
-<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_incremental_addition"><b>Converting an existing page/view area to use backbone (incremental addition)</b></a><br/>
+<a href="book.html#_converting_your_rails_models_to_backbone_js_friendly_json"><b>Converting your Rails models to Backbone.js-friendly JSON</b></a><br/>
+<a href="book.html#_organizing_your_backbone_js_and_rails_code_side_by_side"><b>Organizing your Backbone.js and Rails code side-by-side</b></a><br/>
+<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js"><b>Converting an existing page/view area to use Backbone.js</b></a><br/>
 <a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
 <h3><b>Chapter 6<br/>
 <a href="book.html#_views_and_templates">Views and Templates</a></b></h3><br/>
-<a href="book.html#_view_explanation_what_is_a_view_class_viewcontroller_distinguish_templates_from_views"><b>View explanation (what is a view class, viewcontroller, distinguish templates from views)</b></a><br/>
+<a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
 <a href="book.html#_templating_strategy"><b>Templating strategy</b></a><br/>
+<a href="book.html#_view_helpers"><b>View helpers</b></a><br/>
+<a href="book.html#_form_helpers"><b>Form helpers</b></a><br/>
+<a href="book.html#_event_binding"><b>Event binding</b></a><br/>
+<a href="book.html#_how_to_use_multiple_views_on_the_same_model_collection"><b>How to use multiple views on the same model/collection</b></a><br/>
+<a href="book.html#_composed_views"><b>Composed views</b></a><br/>
+<a href="book.html#_cleaning_up_understanding_binding_and_unbinding"><b>Cleaning up: understanding binding and unbinding</b></a><br/>
+<a href="book.html#_internationalization"><b>Internationalization</b></a><br/>
 <h3><b>Chapter 7<br/>
 <a href="book.html#_models_and_collections">Models and collections</a></b></h3><br/>
 <a href="book.html#_naming_conventions"><b>Naming conventions</b></a><br/>
@@ -37,6 +44,7 @@
 <a href="book.html#_scopes_and_filters"><b>Scopes and filters</b></a><br/>
 <a href="book.html#_client_server_duplicated_business_logic"><b>Client/Server duplicated business logic</b></a><br/>
 <a href="book.html#_validations"><b>Validations</b></a><br/>
+<a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
 <h3><b>Chapter 8<br/>
 <a href="book.html#_testing">Testing</a></b></h3><br/>
 <a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
