--- a/release/toc.html
+++ b/release/toc.html
@@ -42,6 +42,7 @@
 <a href="book.html#_nested_resources"><b>Nested resources</b></a><br/>
 <a href="book.html#_relationships"><b>Relationships</b></a><br/>
 <a href="book.html#_scopes_and_filters"><b>Scopes and filters</b></a><br/>
+<a href="book.html#_sorting"><b>Sorting</b></a><br/>
 <a href="book.html#_client_server_duplicated_business_logic"><b>Client/Server duplicated business logic</b></a><br/>
 <a href="book.html#_validations"><b>Validations</b></a><br/>
 <a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
